# Awaji-Empire-Agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  bot.py  check_env.py  config.py  config.py.example  db_repair.py  doc_generator.py  test_net.py  webapp.py
.github/workflows/: deploy.yml  first_workflow.yml
cogs/: README.md  filter.py  mass_mute.py  survey.py
cogs/mass_mute/: __init__.py  cog.py  logic.py
database_bridge/: Cargo.toml
database_bridge/migrations/: 003_lobby_tables.sql  004_add_lobby_description.sql  005_lobby_updates.sql  006_general_tournament.sql  007_lounge.sql  008_lounge_final_score.sql  009_event_form.sql  010_event_location.sql  011_event_capacity.sql  012_survey_collaborators.sql  013_event_checkin.sql  100_tournament_updates.sql  200_stream_comment_reset_log.sql  201_rank_name_english.sql
database_bridge/src/: lib.rs  main.rs
database_bridge/src/api/: handlers.rs  mod.rs
database_bridge/src/api/handlers/: event.rs  lobby.rs  lounge.rs  mod.rs  reset_log.rs  tournament.rs  ws.rs
database_bridge/src/bot/: mod.rs  survey_handler.rs
database_bridge/src/db/: connection.rs  event_repo.rs  lobby_repo.rs  log_repo.rs  lounge_repo.rs  mod.rs  models.rs  permission_repo.rs  reset_log_repo.rs  response_repo.rs  survey_repo.rs  tournament_repo.rs
database_bridge/src/lobby/: game_link.rs  mod.rs
database_bridge/src/webapp/: dashboard_query.rs  mod.rs
discord_bot/: .env.example  bot.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  webapp.py
discord_bot/cogs/: README.md  filter.py  mass_mute.py
discord_bot/cogs/lobby/: tournament.py
discord_bot/cogs/mass_mute/: __init__.py  cog.py  logic.py
discord_bot/cogs/stream_comment_reset/: __init__.py  cog.py  logic.py
discord_bot/cogs/survey/: __init__.py  cog.py  logic.py
discord_bot/cogs/voice_keeper/: cog.py  logic.py
discord_bot/common/: calendar_utils.py  survey_utils.py
discord_bot/routes/: README.md  event.py  lobby.py  lounge.py  survey.py  tournament.py
discord_bot/services/: README.md  __init__.py  bridge_client.py  database.py  event_service.py  lobby_service.py  log_service.py  lounge_service.py  notification_service.py  permission_service.py  stream_comment_reset_service.py  survey_service.py  tournament_service.py  voice_keeper_service.py
discord_bot/static/: style.css
discord_bot/static/css/: base.css  buttons.css  components.css  event.css  forms.css  layout.css  lobby.css  lounge.css  maintenance.css  pages.css  tournament.css
discord_bot/static/js/: dashboard_lobby.js  dashboard_titles.js  edit_survey.js  event_admin.js  form.js  lounge.js  possession_lobby.js  staff_collaborators.js  tournament.js
discord_bot/templates/: dashboard.html  edit.html  event_admin.html  event_checkin.html  event_confirm.html  form.html  lobby.html  lounge.html  maintenance.html  results.html  submitted.html  tournament.html
discord_bot/tests/: test_bridge_client.py  test_permission_service.py  test_survey_utils.py
docs/: ARCHITECTURE.md  BOT_PERMISSION_REQUEST.md  CHANGELOG_phase2.md  DESIGN_PHILOSOPHY_WEBAPP.md  ENV_SECRETS_MANAGEMENT.md  EVENT_FORM_MANUAL.md  FEATURE_FILTER.md  FEATURE_GENERAL_TOURNAMENT.md  FEATURE_LOBBY.md  FEATURE_LOUNGE.md  FEATURE_MASS_MUTE.md  FEATURE_STREAM_COMMENT_RESET.md  FEATURE_SURVEY.md  FEATURE_VOICE_KEEPER.md  LOUNGE_GUIDE.md  SPECS_PERMISSION_SERVICE.md  STRIPE_PAYMENT_MANUAL.md  event_form_spec.md  legacy_code_reference.md  setup-production.md  technical_lessons.md  voice_keeper.md
docs/Specifications/: TEMPLATE.md  bugfix-form-radio-name.md  phase2-architecture-refactoring.md  (+6 more)
infra/: database_bridge.service  discord_bot.service  discord_webapp.service  nginx-awaji.conf  sudoers_deploy
routes/: survey.py
scripts/: deploy.sh  setup-systemd.sh
services/: README.md  __init__.py  permission.py
static/: style.css
tasks/: lessons.md  todo.md
templates/: dashboard.html  edit.html  index.html  login.html  submitted.html
(+45 files in other folders)
