[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiomysql==0.3.2",
    "aiosignal==1.4.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "discord-py==2.6.4",
    "flask==3.1.2",
    "flask-discord==0.1.69",
    "frozenlist==1.8.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.27.0",
    "hypercorn==0.18.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "multidict==6.7.0",
    "mysql-connector-python==9.5.0",
    "numpy==2.3.5",
    "oauthlib==3.3.1",
    "pandas==2.3.3",
    "priority==2.0.0",
    "propcache==0.4.1",
    "pyjwt==2.10.1",
    "pymysql==1.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "quart==0.20.0",
    "quart-cors==0.8.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.45",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "werkzeug==3.1.4",
    "wsproto==1.3.2",
    "yarl==1.22.0",
]
